--- a/dos33.html
+++ b/dos33.html
@@ -172,12 +172,12 @@ a {
     color: #24F;
     font-weight: bold;     /* default to bold for function names */
 }
-a.x { /* func -- can't use '$' in css name */
+a.x { /* func name -- can't use '$' in css name */
     color: #24f;
     text-decoration: none; /* remove underlink from data link */
     font-weight: normal;   /* remove bold */
 }
-a.d { /* data http://stackoverflow.com/questions/448981/which-characters-are-valid-in-css-class-names-selectors */
+a.d { /* data var name -- http://stackoverflow.com/questions/448981/which-characters-are-valid-in-css-class-names-selectors */
     color: #060;
     text-decoration: none; /* remove underlink from data link */
     font-weight: normal;   /* remove bold */
@@ -199,11 +199,6 @@ a.name {
     color: #444;
     font-style: italic; 
 }
-
-span.data {
-    color: #040;
-}
-
 h1 {
     font-size: 200%;
 }
@@ -1375,14 +1370,14 @@ TODO:
 3DB6:08             013             PHP             ;AND SAVE THAT
 3DB7:B0 03          014             BCS <a href="#TRYTRK2">TRYTRK2</a>     ;MUST PRENIBBLE FOR WRITE.
                     015     LST OFF
-                    016     DO DIAGMOD<span style="background-color:#EEE">
+                    016     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     017         LDY #TC17           ;SAY 'PRENIBBLIZING'
                     018         STY TL7                                 </span>
                     019     FIN
                     020     LST ON
 3DB9:20 00 38       021             JSR <a href="#PRENIB16">PRENIB16</a>
                     022     LST OFF
-                    023     DO DIAGMOD<span style="background-color:#EEE">
+                    023     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     024         LDY #SP             ;PRENIB FINISHED    
                     025         STY TL7                                 </span>
                     026     FIN
@@ -1391,7 +1386,7 @@ TODO:
 3DBE:8C 78 05       029             STY RETRYCNT
 3DC1:AE F8 05       030 <a class="f" name="TRYADR"      >TRYADR      </a>LDX SLOT        ;GET SLOT NUM INTO X-REG
                     031     LST OFF
-                    032     DO DIAGMOD<span style="background-color:#EEE">
+                    032     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     033         LDA #TC4            ;SAY 'READING ADDRESS'          
                     034         STA TL4                                             
                     035         LDA #SP             ;SAY 'NO ADDRESS ERROR' (YET)   
@@ -1400,14 +1395,14 @@ TODO:
                     038     LST ON
 3DC4:20 44 39       039             JSR <a href="#RDADR16">RDADR16</a>     ;READ NEXT ADDRESS FIELD        ; ^
                     040     LST OFF
-                    041     DO DIAGMOD<span class="macro">
+                    041     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     042         LDA #SP             ;ADDRESS-READ DONE              
                     043         STA TL4                                             </span>
                     044     FIN
                     045     LST ON
 3DC7:90 24          046             BCC <a href="#RDRIGHT">RDRIGHT</a>     ;IF READ IT RIGHT, HURRAH!      ; v
                     047     LST OFF
-                    048     DO DIAGMOD<span class="macro">
+                    048     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     049         LDA #TC6            ;ADDRESS-READ DONE              
                     050         STA TL4                                             </span>
                     051     FIN
@@ -1477,7 +1472,7 @@ TODO:
 3E2B:B9 B8 3F       115             LDA <a class="d" href="#INTRLEAV">INTRLEAV</a>,Y  ;COMPUTE PHYSICAL SECTOR        ; DOS Sector Interleave/Skew Mapping
 <hr>3E2E:C5 2D          116             CMP <a class="d" href="#SECT">SECT</a>        ;DID WE GET THE SECTOR?         ; === Page <span class="page">124</span> ===
                     117     LST OFF
-                    118     DO <a class="macro">DIAGMOD</a><span style="background-color:#EEE">
+                    118     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     119         BEQ GOTSECT         ;=&gt;WE FOUND IT!                         
                     120         LDA #TC5            ;SAY 'LATENCY'                          
                     121         STA TL5                                                     
@@ -1495,7 +1490,7 @@ TODO:
                     133 *
                     134 <a class="f" name="GOTSECT"     >GOTSECT     </a>EQU *
                     135     LST OFF
-                    136     DO DIAGMOD<span style="background-color:#EEE">
+                    136     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     137         LDA #SP             ;SAY 'NO LATENCY'                   
                     138         STA TL5                                                 
                     139         INC SCOUNT          ;BUMP 'SECTORS-ACCESSED' COUNT      </span>
@@ -1504,7 +1499,7 @@ TODO:
 3E32:28             142             PLP
 3E33:90 1C          143             BCC <a href="#WRIT">WRIT</a>        ;CARRY WAS SET FOR READ OPERATION. ; v
                     144     LST OFF
-                    145     DO DIAGMOD<span style="background-color:#EEE">
+                    145     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     146         LDA #TC9            ;SAY 'READING'                  
                     147         STA TL9                                             
                     148         LDA #SP                                             
@@ -1513,36 +1508,36 @@ TODO:
                     151     LST ON
 3E35:20 DC 38       152             JSR <a href="#READ16">READ16</a>      ;CLEARED FOR WRITE
                     153     LST OFF
-                    154     DO DIAGMOD<span style="background-color:#EEE">
+                    154     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     155         LDA #SP                                             
                     156         STA TL9                                             </span>
                     157     FIN
                     158     LST ON
 3E38:08             159             PHP             ;SAVE STATUS OF READ OPERATION
                     160     LST OFF
-                    161     DO DIAGMOD<span style="background-color:#EEE">
-                    162         BCC GOODREAD        ;NO ERROR                       
+                    161     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    162         BCC <a class="x" href="#GOODREAD">GOODREAD</a>        ;NO ERROR                       
                     163         LDA #TC10           ;SAY 'READ ERROR'               
                     164         STA TL10                                            
-                    165         JMP TRYADR2         ;RETRY ON ERROR                 
+                    165         JMP <a class="x" href="#TRYADR2">TRYADR2</a>         ;RETRY ON ERROR                 
                     166 *                                                           
-                    167 GOODREAD EQU *                                              </span>
+                    167 <a class="name" name="GOODREAD">GOODREAD </a>EQU *                                              </span>
                     168     ELSE
                     169     LST ON
-3E39:B0 8E          170             BCS <a href="#TRYADR2">TRYADR2</a>     ;CARRY SET UPON RETURN IF BAD READ ;  ^
+3E39:B0 8E          170             BCS <a class="x" href="#TRYADR2">TRYADR2</a>     ;CARRY SET UPON RETURN IF BAD READ ;  ^
                     171     FIN
 3E3B:28             172             PLP             ;CAREFUL OF STACK
 3E3C:A2 00          173             LDX #0          ;SET TO POSTNIBLIZE
 3E3E:86 26          174             STX T0          ; All 256 BYTES OF THE SECTOR
                     175     LST OFF
-                    176     DO DIAGMOD<span style="background-color:#EEE">
-                    177         LDA #TC11           ;SAY 'POSTINIBBLIZING'          </span>;POST_IN_NIBBLIZING<span style="background-color:#EEE">
+                    176     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    177         LDA #TC11           ;SAY 'POSTINIBBLIZING'          </span>;POST_IN_NIBBLIZING<span class="macro">
                     178         STA TL11                                            </span>
 <hr>                    179     FIN                                                     ; === Page <span class="page">125</span> ===
                     180     LST ON
 3E40:20 C2 38       181             JSR <a href="#POSTNB16">POSTNB16</a>    ;DECODE INTO REAL WORLD DATA
                     182     LST OFF
-                    183     DO DIAGMOD<span style="background-color:#EEE">
+                    183     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     184         LDA #SP             ;POSTNIB COMPLETED              
                     185         STA TL11                                            </span>
                     186     FIN
@@ -1555,22 +1550,22 @@ TODO:
 3E4B:91 48          193             STA (<a class="d" href="#IOBPL">IOBPL</a>),Y
 3E4D:BD 88 C0       194             LDA <a class="d" href="#MOTOROFF">MOTOROFF</a>,X  ; TURN IT OFF...
                     195     LST OFF
-                    196     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span style="background-color:#EEE">
+                    196     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     197 * AVERAGE LATENCY = LCOUNT/SCOUNT                           
                     198         LDA LCOUNT          ; GET TOTAL LATENCY             
                     199         LDY #0              ; CLEAR QUOTIENT                
                     200 <a class="name" name="DIVIDE" id="DIVIDE" >DIVIDE  </a>EQU *                                               
                     201         CMP SCOUNT          ; DONE?                         
-                    202         BCC <a href="#PRTLAT"   >PRTLAT</a>          ; =&gt;YES.PRINT IT                
+                    202         BCC <a class="x" href="#PRTLAT"   >PRTLAT</a>          ; =&gt;YES.PRINT IT                
                     203         SBC SCOUNT          ; REMOVE SCOUNT                 
                     204         INY                 ; INCREMENT QUOTIENT            
-                    205         BNE <a href="#DIVIDE">DIVIDE</a>                                          
+                    205         BNE <a class="x" href="#DIVIDE">DIVIDE</a>                                          
                     206 *                                                           
                     207 <a class="name" name="PRTLAT" id="PRTLAD">PRTLAT  </a>TYA                                                 </span>; Print Latency<span style="background-color:#EEE">
                     208         AND #$0F            ; MAX LATENCY=15                
                     209         ORA #$B0            ; MAKE ASCII                    </span>; No, this is make Apple Text, as ASCII = $00..$7F<span style="background-color:#EEE">
                     210         CMP #$BA            ; IS IT A-F                     
-                    211         BCC <a href="#PRTL2" >PRTL2</a>           ;=&gt;NO                           
+                    211         BCC <a class="x" href="#PRTL2" >PRTL2</a>           ;=&gt;NO                           
                     212         ADC #6              ;ADD 7 (INCLUDES CARRY)         
                     213 <a class="name" name="PRTL2" id="PRTL2">PRTL2  </a>STA TL12            ; STUFF LATENCY COUNT           
                     214         LDA #SP             ; SAY 'RWTS NOT ACTIVE'         
@@ -1580,7 +1575,7 @@ TODO:
 3E50:60             218             RTS
                     219 <a class="f" name="WRIT"        >WRIT        </a>EQU *
                     220     LST OFF
-                    221     DO DIAGMOD<span style="macro">
+                    221     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span style="macro">
                     222        LDA #TC8             ; SAY 'WRITING'                 
                     223        STA TL8                                              </span>
                     224     FIN
@@ -1588,7 +1583,7 @@ TODO:
 3E51:20 2A 38       226             JSR <a class="x" href="#WRITE16">WRITE16</a>     ; WRITE NYBBLES NOW             ; ^ WRITRTN, page 137
 
                     227     LST OFF
-                    228     DO DIAGMOD<span class="macro">
+                    228     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     229        LDA #SP              ; SAY 'WRITING'                 
                     230        STA TL8                                              </span>
                     231     FIN
@@ -1652,7 +1647,7 @@ TODO:
                     011 *
                     012             REP 40
                     013 <a name="DSKFORM"    >DSKFORM     </a>EQU *
-                    014     DO DIAGMOD              ;ELIMINATE FMTR FROM DIAG ASSEMBLY<span class="macro">
+                    014     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a>              ;ELIMINATE FMTR FROM DIAG ASSEMBLY<span class="macro">
                     015         LST OFF                                             </span>
                     016     ELSE
 3EAF:A0 03          017             LDY #3                                          ; *sigh* magic number: IOB_OFFSET_VOL = $3
